# shap-authorship-analysis-demo

./: .flake8  .gitignore  .gitmodules  Pipfile  README.md  pyproject.toml  shap-authorship-analysis-demo.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql.yml  pylint.yml  python-app.yml
app/: setup.py
app/authorship_tool/main/: __init__.py
app/authorship_tool/util/: feature_counter.py
authorship_tool/: config.py  types.py  types_.py
authorship_tool/authorship_tool/: config.py  nltk_gutenberg_analysis.py
authorship_tool/authorship_tool/feature_util/: table_generator.py
authorship_tool/authorship_tool/lgbm/: model.py  trainer.py
authorship_tool/authorship_tool/util/: __init__.py  _dim_reshape.py  _path.py  _type_guard.py  dataset_generator.py  frequency_calculator.py  paragraph_analysis_tool.py
authorship_tool/demo/: nltk_gutenberg_analysis.ipynb  nltk_inaugural_analysis.ipynb
authorship_tool/test/util/: test__type_guard.py  test_type_guard.py
authorship_tool/util/: __init__.py  dim_reshaper.py  path.py  path_util.py  serializer.py  table.py  table_util.py  text_reader.py  tokenizer.py  type_guard.py
authorship_tool/util/feature/: calculator.py  counter.py  dataset_generator.py  ds_generator.py  generator.py  pos.py  regex.py
authorship_tool/util/generator/: enron_generator.py
authorship_tool/util/lgbm/: model.py  train.py  trainer.py
authorship_tool/util/ml/: analyzer.py  cv_trainer.py  model.py  trainer.py
demo/: liyanage_vijini_2022.ipynb  nltk_gutenberg_analysis.ipynb  nltk_gutenberg_analysis.py  nltk_gutenberg_analysis_loocv.ipynb  nltk_inaugural_analysis.ipynb  nltk_inaugural_analysis.py  nltk_inaugural_analysis_loocv.ipynb
demo/1_select_data/: gutenberg.ipynb  inaugral.ipynb  liyanage_vijini_2022.ipynb  uoa_thesis_2014_2017.ipynb
demo/2_generate_dataset/: generate_dataset_from_corpus.ipynb  generate_dataset_from_text.ipynb
demo/3_train/: train_once.ipynb
demo/data_analyzer/: nltk_gutenberg.ipynb
demo/data_classifier/: enron_analysis.ipynb  liyanage_vijini_2022_analysis_demo.ipynb  nltk_gutenberg_analysis_demo.ipynb  nltk_inaugural_analysis_demo.ipynb  nltk_inaugural_analysis_loocv_demo.ipynb
demo/data_classifier/JSLS2024/: shakespeare_bryant_JJ.ipynb  shakespeare_bryant_JJ_integrated.ipynb  shakespeare_bryant_JJ_only.ipynb  shakespeare_bryant_JJ_only_integrated.ipynb  shakespeare_bryant_JJ_without_NNP.ipynb  shakespeare_bryant_all.ipynb
demo/dataset_generator/: enron_dataset_generator.ipynb
demo/dump/gutenberg/: lgbm_model.pkl
dump/dataset/: and_pred_prob.csv  ans_pred.csv  ans_pred_prob.csv  test_ans.csv  test_data.csv  test_shap_val.csv  train_ans.csv  train_data.csv
misc/: vijini_paragraph_improve_regex.txt
others/: vijini_paragraph_improve_regex.txt
src/demo/: nltk_gutenberg_analysis.py
test/: notebooks.ipynb
test/util/: test_tokenizer.py  test_type_guard.py
(+97 files in other folders)
