[tool.poetry]
name = "authorship_tool"
version = "0.1.0"
description = ""
authors = ["ZEKE320 <46393375+ZEKE320@users.noreply.github.com>"]
readme = "README.md"
packages = [{ from = ".", include = "authorship_tool" }]

[tool.poetry.dependencies]
python = "3.11.8"
black = { extras = ["jupyter"], version = "*" }
isort = "*"
jupyter = "*"
lightgbm = "*"
matplotlib = "*"
mypy = "*"
nltk = "*"
numpy = "*"
pandas = "*"
pandas-stubs = "*"
pydash = "*"
pytest = "*"
pytest-mock = "*"
rich = "*"
scikit-learn = "*"
shap = "*"
tabulate = "*"
types-tabulate = "*"
pypdf = "*"
spacy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
exclude = "data/*"

[tool.pylint.MASTER]
disable = ["wrong-import-position", "line-too-long"]
