[tool.poetry]
name = "authorship_tool"
version = "0.1.0"
description = ""
authors = ["ZEKE320 <46393375+ZEKE320@users.noreply.github.com>"]
readme = "README.md"
packages = [{ from = ".", include = "authorship_tool" }]

[tool.poetry.dependencies]
python = "3.12.4"
jupyter = "*"
lightgbm = { extras = ["gpu"], version = "^4.3.0" }
matplotlib = "*"
nltk = "*"
numpy = "*"
pandas = "*"
pandas-stubs = "*"
pytest = "*"
pytest-mock = "*"
rich = "*"
scikit-learn = "*"
shap = "*"
spacy = "*"
seaborn = "^0.13.2"
ruff = "^0.5.2"
polars = "^1.1.0"
pyarrow = "^16.1.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-include = ["*.ipynb"]